PowerPlan ComboBox Done

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Pas toe",
   "Button_Refresh": "Verfris",
   "Button_Help": "Hulp",
+  "Button_Delete": "Verwyder",
   "Common_On": "Aan",
   "Common_Off": "Af",
   "Common_Search_Placeholder": "Tik hier om te soek...",
@@ -150,7 +151,7 @@
   "Feature_Notifications_Name": "Kennisgewings",
   "Feature_Power_Name": "Krag",
   "Feature_Privacy_Name": "Privaatheid & Sekuriteit",
-  "Feature_GamingPerformance_Name": "Dobbel & Verrigting",
+  "Feature_GamingPerformance_Name": "Speletjies & Verrigting",
   "Feature_Sound_Name": "Klank",
   "Feature_Update_Name": "Opdatering",
   "Feature_Explorer_Name": "Verkenner",
@@ -602,11 +603,11 @@
   "Setting_gaming-win32-priority_Option_1": "Agtergronddienste",
   "Setting_gaming-system-responsiveness_Name": "Stelselresponsiwiteit vir Speletjies",
   "Setting_gaming-system-responsiveness_Description": "Minimaliseer agtergrondtaak-inmenging deur meer SVE-tyd aan jou aktiewe speletjie of multimedia-toepassing toe te wys",
-  "Setting_gaming-cpu-priority_Name": "SVE Prioriteit vir Dobbel",
+  "Setting_gaming-cpu-priority_Name": "SVE Prioriteit vir Speletjies",
   "Setting_gaming-cpu-priority_Description": "Gee speletjies hoër SVE-skeduleringsprioriteit om meer verwerkertyd aan jou speletjie te wy",
-  "Setting_gaming-scheduling-category_Name": "Hoë Skeduleringskategorie vir Dobbel",
+  "Setting_gaming-scheduling-category_Name": "Hoë Skeduleringskategorie vir Speletjies",
   "Setting_gaming-scheduling-category_Description": "Wys hoë-prioriteit skeduleringskategorie toe om te verseker dat speletjies voorkeurstelselhulpbrontoewysing ontvang",
-  "Setting_gaming-gpu-priority_Name": "GPU Prioriteit vir Dobbel",
+  "Setting_gaming-gpu-priority_Name": "GPU Prioriteit vir Speletjies",
   "Setting_gaming-gpu-priority_Description": "Gee speletjies hoër GPU-skeduleringsprioriteit om grafiese verrigting en raamtempo's te verbeter",
   "Setting_gaming-gpu-scheduling_Name": "Hardeware-versnelde GPU Skedulering",
   "Setting_gaming-gpu-scheduling_Description": "Laat jou GPU sy eie geheue en skedulering bestuur vir verminderde vertraging en verbeterde verrigting",
@@ -620,7 +621,7 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Laat Windows toe om speletjies te optimaliseer wat in volskermmodus loop. Deaktivering kan verrigtingskwessies of hakkel in sommige ouer speletjies regstel wat nie goed werk met randlose volskermoptimalisering nie",
   "Setting_gaming-performance-desktop-composition_Name": "Lessenaar Komposisie-effekte",
   "Setting_gaming-performance-desktop-composition_Description": "Aktiveer visuele effekte bestuur deur die Desktop Window Manager. Deaktivering mag geringe verrigtingswinste op ouer hardeware bied maar sal Aero-effekte breek",
-  "Setting_gaming-network-throttling_Name": "Deaktiveer Netwerkbeperking vir Dobbel",
+  "Setting_gaming-network-throttling_Name": "Deaktiveer Netwerkbeperking vir Speletjies",
   "Setting_gaming-network-throttling_Description": "Deaktiveer netwerkpakketbeperking om vertraging te verminder en aanlyn spelresponsiwiteit te verbeter",
   "Setting_gaming-nagle-algorithm_Name": "Aktiveer Nagle se Algoritme",
   "Setting_gaming-nagle-algorithm_Description": "Bondel klein netwerkpakkies saam voordat dit gestuur word om doeltreffendheid te verbeter. Deaktivering verminder vertraging vir intydse aanlyn spel maar mag bandwydtegebruik effens verhoog",
@@ -694,7 +695,7 @@
   "Setting_gaming-xbox-game-save_Name": "Xbox Live Speletjie Stoor",
   "Setting_gaming-xbox-game-save_Description": "Sinkroniseer speletjiestore na Xbox Live wolk. Slegs nodig vir Xbox Game Pass en Microsoft Store speletjies met wolkstoorfunksies",
   "Setting_gaming-xbox-networking_Name": "Xbox Live Netwerkdiens",
-  "Setting_gaming-xbox-networking_Description": "Ondersteun Xbox Live multispeler netwerk. Vereis vir Xbox multispeler speletjies maar nie nodig vir Steam/Epic/ander dobbelplatforms nie",
+  "Setting_gaming-xbox-networking_Description": "Ondersteun Xbox Live multispeler netwerk. Vereis vir Xbox multispeler speletjies maar nie nodig vir Steam/Epic/ander speelplatforms nie",
   "Setting_gaming-biometric-service_Name": "Windows Biometriese Diens",
   "Setting_gaming-biometric-service_Description": "Aktiveer vingerafdruk en gesigsherkenning aanmelding via Windows Hello. Veilig om te deaktiveer op lessenaarstelsels sonder biometriese hardeware",
   "Setting_gaming-touch-keyboard-service_Name": "Raaksleutelbord en Handskrifpaneel Diens",
@@ -1001,7 +1002,7 @@
   "ExternalApps_Category_DevelopmentApps": "Ontwikkeling Toepassings",
   "ExternalApps_Category_DocumentViewers": "Dokument Kykers",
   "ExternalApps_Category_FileDiskManagement": "Lêer & Skyf Bestuur",
-  "ExternalApps_Category_Gaming": "Dobbel",
+  "ExternalApps_Category_Gaming": "Speletjies",
   "ExternalApps_Category_Imaging": "Beelding",
   "ExternalApps_Category_MessagingEmailCalendar": "Boodskappe, E-pos & Kalender",
   "ExternalApps_Category_MultimediaAudioVideo": "Multimedia (Oudio & Video)",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Bied ultieme verrigting op hoër-end rekenaars.",
   "PowerPlan_WinhancePowerPlan_Name": "Winhance Kragplan",
   "PowerPlan_WinhancePowerPlan_Description": "Ultieme Verrigting met Winhance-geoptimaliseerde instellings vir maksimum verrigting.",
+  "PowerPlan_Active_Badge": "[Aktief]",
+  "PowerPlan_Status_Exists": "Geïnstalleer op stelsel",
+  "PowerPlan_Status_NotExists": "Voorafbepaalde plan (klik om te installeer)",
+  "PowerPlan_Delete_Tooltip": "Verwyder hierdie kragplan",
+  "Dialog_DeletePowerPlan_Title": "Verwyder Kragplan",
+  "Dialog_DeletePowerPlan_Message": "Is jy seker jy wil die volgende kragplan verwyder?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Kan Nie Aktiewe Plan Verwyder Nie",
+  "Dialog_CannotDeleteActivePlan_Message": "Jy kan nie die huidige aktiewe kragplan verwyder nie. Skakel eers oor na 'n ander plan.",
+  "Dialog_CannotDeletePlan_Title": "Kan Nie Plan Verwyder Nie",
+  "Dialog_CannotDeletePlan_Message": "Hierdie plan bestaan nie op die stelsel nie en kan nie verwyder word nie.",
+  "Dialog_DeleteFailed_Title": "Verwyder Het Misluk",
+  "Dialog_DeleteFailed_Message": "Kon nie kragplan '{0}' verwyder nie. Kyk die logs vir meer besonderhede.",
   "WIMUtil_Title": "Windows Installasie Media Nutsmiddel",
   "WIMUtil_Subtitle": "Skep Pasgemaakte Windows Installasie Media",
   "WIMUtil_SelectWorkingDirectory": "Kies Werksgids",
