--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Použít",
   "Button_Refresh": "Aktualizovat",
   "Button_Help": "Nápověda",
+  "Button_Delete": "Smazat",
   "Common_On": "Zapnuto",
   "Common_Off": "Vypnuto",
   "Common_Search_Placeholder": "Hledejte zde...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Poskytuje maximální výkon na výkonnějších počítačích.",
   "PowerPlan_WinhancePowerPlan_Name": "Plán napájení Winhance",
   "PowerPlan_WinhancePowerPlan_Description": "Maximální výkon s optimalizovanými nastaveními Winhance pro maximální výkon.",
+  "PowerPlan_Active_Badge": "[Aktivní]",
+  "PowerPlan_Status_Exists": "Nainstalováno v systému",
+  "PowerPlan_Status_NotExists": "Předdefinovaný plán (klikněte pro instalaci)",
+  "PowerPlan_Delete_Tooltip": "Smazat tento plán napájení",
+  "Dialog_DeletePowerPlan_Title": "Smazat plán napájení",
+  "Dialog_DeletePowerPlan_Message": "Opravdu chcete smazat následující plán napájení?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Nelze smazat aktivní plán",
+  "Dialog_CannotDeleteActivePlan_Message": "Nelze smazat aktuálně aktivní plán napájení. Nejprve přepněte na jiný plán.",
+  "Dialog_CannotDeletePlan_Title": "Nelze smazat plán",
+  "Dialog_CannotDeletePlan_Message": "Tento plán v systému neexistuje a nelze jej smazat.",
+  "Dialog_DeleteFailed_Title": "Smazání selhalo",
+  "Dialog_DeleteFailed_Message": "Nepodařilo se smazat plán napájení '{0}'. Zkontrolujte protokoly pro více informací.",
   "WIMUtil_Title": "Nástroj pro instalační média Windows",
   "WIMUtil_Subtitle": "Vytvořit vlastní instalační médium Windows",
   "WIMUtil_SelectWorkingDirectory": "Vybrat pracovní adresář",
