--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Anwenden",
   "Button_Refresh": "Aktualisieren",
   "Button_Help": "Hilfe",
+  "Button_Delete": "Löschen",
   "Common_On": "Ein",
   "Common_Off": "Aus",
   "Common_Search_Placeholder": "Tippen Sie hier, um zu suchen...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Bietet ultimative Leistung auf High-End-PCs.",
   "PowerPlan_WinhancePowerPlan_Name": "Winhance-Energiesparplan",
   "PowerPlan_WinhancePowerPlan_Description": "Ultimative Leistung mit Winhance-optimierten Einstellungen für maximale Leistung.",
+  "PowerPlan_Active_Badge": "[Aktiv]",
+  "PowerPlan_Status_Exists": "Auf dem System installiert",
+  "PowerPlan_Status_NotExists": "Vordefinierter Plan (zum Installieren klicken)",
+  "PowerPlan_Delete_Tooltip": "Diesen Energiesparplan löschen",
+  "Dialog_DeletePowerPlan_Title": "Energiesparplan löschen",
+  "Dialog_DeletePowerPlan_Message": "Möchten Sie den folgenden Energiesparplan wirklich löschen?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Aktiven Plan kann nicht gelöscht werden",
+  "Dialog_CannotDeleteActivePlan_Message": "Sie können den aktuell aktiven Energiesparplan nicht löschen. Bitte wechseln Sie zuerst zu einem anderen Plan.",
+  "Dialog_CannotDeletePlan_Title": "Plan kann nicht gelöscht werden",
+  "Dialog_CannotDeletePlan_Message": "Dieser Plan existiert nicht auf dem System und kann nicht gelöscht werden.",
+  "Dialog_DeleteFailed_Title": "Löschen fehlgeschlagen",
+  "Dialog_DeleteFailed_Message": "Energiesparplan '{0}' konnte nicht gelöscht werden. Überprüfen Sie die Protokolle für weitere Details.",
   "WIMUtil_Title": "Windows-Installationsmedien-Dienstprogramm",
   "WIMUtil_Subtitle": "Benutzerdefinierte Windows-Installationsmedien erstellen",
   "WIMUtil_SelectWorkingDirectory": "Arbeitsverzeichnis auswählen",
