--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Εφαρμογή",
   "Button_Refresh": "Ανανέωση",
   "Button_Help": "Βοήθεια",
+  "Button_Delete": "Διαγραφή",
   "Common_On": "Ενεργό",
   "Common_Off": "Ανενεργό",
   "Common_Search_Placeholder": "Πληκτρολογήστε για αναζήτηση...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Παρέχει κορυφαίες επιδόσεις σε υπολογιστές υψηλότερης κατηγορίας.",
   "PowerPlan_WinhancePowerPlan_Name": "Σχέδιο Ενέργειας Winhance",
   "PowerPlan_WinhancePowerPlan_Description": "Κορυφαίες Επιδόσεις με ρυθμίσεις βελτιστοποιημένες από το Winhance για μέγιστη απόδοση.",
+  "PowerPlan_Active_Badge": "[Ενεργό]",
+  "PowerPlan_Status_Exists": "Εγκατεστημένο στο σύστημα",
+  "PowerPlan_Status_NotExists": "Προκαθορισμένο σχέδιο (κάντε κλικ για εγκατάσταση)",
+  "PowerPlan_Delete_Tooltip": "Διαγραφή αυτού του σχεδίου ενέργειας",
+  "Dialog_DeletePowerPlan_Title": "Διαγραφή Σχεδίου Ενέργειας",
+  "Dialog_DeletePowerPlan_Message": "Είστε βέβαιοι ότι θέλετε να διαγράψετε το ακόλουθο σχέδιο ενέργειας;\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Δεν είναι δυνατή η διαγραφή ενεργού σχεδίου",
+  "Dialog_CannotDeleteActivePlan_Message": "Δεν μπορείτε να διαγράψετε το τρέχον ενεργό σχέδιο ενέργειας. Παρακαλώ μεταβείτε πρώτα σε διαφορετικό σχέδιο.",
+  "Dialog_CannotDeletePlan_Title": "Δεν είναι δυνατή η διαγραφή σχεδίου",
+  "Dialog_CannotDeletePlan_Message": "Αυτό το σχέδιο δεν υπάρχει στο σύστημα και δεν μπορεί να διαγραφεί.",
+  "Dialog_DeleteFailed_Title": "Η διαγραφή απέτυχε",
+  "Dialog_DeleteFailed_Message": "Αποτυχία διαγραφής του σχεδίου ενέργειας '{0}'. Ελέγξτε τα αρχεία καταγραφής για περισσότερες λεπτομέρειες.",
   "WIMUtil_Title": "Βοηθητικό Πρόγραμμα Μέσων Εγκατάστασης Windows",
   "WIMUtil_Subtitle": "Δημιουργία Προσαρμοσμένων Μέσων Εγκατάστασης Windows",
   "WIMUtil_SelectWorkingDirectory": "Επιλογή Καταλόγου Εργασίας",
