--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Apply",
   "Button_Refresh": "Refresh",
   "Button_Help": "Help",
+  "Button_Delete": "Delete",
   "Common_On": "On",
   "Common_Off": "Off",
   "Common_Search_Placeholder": "Type here to search...",
@@ -167,6 +168,7 @@
   "SettingGroup_Layout": "Layout",
   "SettingGroup_Start_Menu_Settings": "Start Menu Settings",
   "SettingGroup_Frequently_Used_Items": "Frequently Used Items",
+  "SettingGroup_Start_Menu": "Start Menu",
   "SettingGroup_Windows_Theme": "Windows Theme",
   "SettingGroup_Theme_Mode": "Theme mode",
   "SettingGroup_Transparency": "Transparency",
@@ -1024,6 +1026,18 @@
   "PowerPlan_UltimatePerformance_Description": "Provides ultimate performance on higher end PCs.",
   "PowerPlan_WinhancePowerPlan_Name": "Winhance Power Plan",
   "PowerPlan_WinhancePowerPlan_Description": "Ultimate Performance with Winhance-optimized settings for maximum performance.",
+  "PowerPlan_Active_Badge": "[Active]",
+  "PowerPlan_Status_Exists": "Installed on system",
+  "PowerPlan_Status_NotExists": "Predefined plan (click to install)",
+  "PowerPlan_Delete_Tooltip": "Delete this power plan",
+  "Dialog_DeletePowerPlan_Title": "Delete Power Plan",
+  "Dialog_DeletePowerPlan_Message": "Are you sure you want to delete the following power plan?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Cannot Delete Active Plan",
+  "Dialog_CannotDeleteActivePlan_Message": "You cannot delete the currently active power plan. Please switch to a different plan first.",
+  "Dialog_CannotDeletePlan_Title": "Cannot Delete Plan",
+  "Dialog_CannotDeletePlan_Message": "This plan does not exist on the system and cannot be deleted.",
+  "Dialog_DeleteFailed_Title": "Delete Failed",
+  "Dialog_DeleteFailed_Message": "Failed to delete power plan '{0}'. Check the logs for more details.",
   "WIMUtil_Title": "Windows Installation Media Utility",
   "WIMUtil_Subtitle": "Create Custom Windows Installation Media",
   "WIMUtil_SelectWorkingDirectory": "Select Working Directory",
