--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Aplicar",
   "Button_Refresh": "Actualizar",
   "Button_Help": "Ayuda",
+  "Button_Delete": "Eliminar",
   "Common_On": "Activado",
   "Common_Off": "Desactivado",
   "Common_Search_Placeholder": "Escribe aquí para buscar...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Proporciona el máximo rendimiento en PCs de gama alta.",
   "PowerPlan_WinhancePowerPlan_Name": "Plan de energía de Winhance",
   "PowerPlan_WinhancePowerPlan_Description": "Máximo rendimiento con configuraciones optimizadas por Winhance para el máximo rendimiento.",
+  "PowerPlan_Active_Badge": "[Activo]",
+  "PowerPlan_Status_Exists": "Instalado en el sistema",
+  "PowerPlan_Status_NotExists": "Plan predefinido (clic para instalar)",
+  "PowerPlan_Delete_Tooltip": "Eliminar este plan de energía",
+  "Dialog_DeletePowerPlan_Title": "Eliminar Plan de Energía",
+  "Dialog_DeletePowerPlan_Message": "¿Está seguro de que desea eliminar el siguiente plan de energía?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "No se puede eliminar el plan activo",
+  "Dialog_CannotDeleteActivePlan_Message": "No puede eliminar el plan de energía actualmente activo. Por favor, cambie primero a un plan diferente.",
+  "Dialog_CannotDeletePlan_Title": "No se puede eliminar el plan",
+  "Dialog_CannotDeletePlan_Message": "Este plan no existe en el sistema y no se puede eliminar.",
+  "Dialog_DeleteFailed_Title": "Error al eliminar",
+  "Dialog_DeleteFailed_Message": "No se pudo eliminar el plan de energía '{0}'. Consulte los registros para más detalles.",
   "WIMUtil_Title": "Utilidad de Medios de Instalación de Windows",
   "WIMUtil_Subtitle": "Crear Medios de Instalación de Windows Personalizados",
   "WIMUtil_SelectWorkingDirectory": "Seleccionar Directorio de Trabajo",
