--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Appliquer",
   "Button_Refresh": "Actualiser",
   "Button_Help": "Aide",
+  "Button_Delete": "Supprimer",
   "Common_On": "Activé",
   "Common_Off": "Désactivé",
   "Common_Search_Placeholder": "Tapez ici pour rechercher...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Fournit des performances ultimes sur les PC haut de gamme.",
   "PowerPlan_WinhancePowerPlan_Name": "Mode d'alimentation Winhance",
   "PowerPlan_WinhancePowerPlan_Description": "Performances ultimes avec des paramètres optimisés par Winhance pour des performances maximales.",
+  "PowerPlan_Active_Badge": "[Actif]",
+  "PowerPlan_Status_Exists": "Installé sur le système",
+  "PowerPlan_Status_NotExists": "Plan prédéfini (cliquez pour installer)",
+  "PowerPlan_Delete_Tooltip": "Supprimer ce mode de gestion d'alimentation",
+  "Dialog_DeletePowerPlan_Title": "Supprimer le mode de gestion d'alimentation",
+  "Dialog_DeletePowerPlan_Message": "Êtes-vous sûr de vouloir supprimer le mode de gestion d'alimentation suivant ?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Impossible de supprimer le plan actif",
+  "Dialog_CannotDeleteActivePlan_Message": "Vous ne pouvez pas supprimer le mode de gestion d'alimentation actuellement actif. Veuillez d'abord passer à un autre plan.",
+  "Dialog_CannotDeletePlan_Title": "Impossible de supprimer le plan",
+  "Dialog_CannotDeletePlan_Message": "Ce plan n'existe pas sur le système et ne peut pas être supprimé.",
+  "Dialog_DeleteFailed_Title": "Échec de la suppression",
+  "Dialog_DeleteFailed_Message": "Impossible de supprimer le mode de gestion d'alimentation '{0}'. Consultez les journaux pour plus de détails.",
   "WIMUtil_Title": "Utilitaire de support d'installation Windows",
   "WIMUtil_Subtitle": "Créer un support d'installation Windows personnalisé",
   "WIMUtil_SelectWorkingDirectory": "Sélectionner le répertoire de travail",
