--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -131,6 +131,7 @@
   "Button_Apply": "लागू करें",
   "Button_Refresh": "रीफ्रेश",
   "Button_Help": "सहायता",
+  "Button_Delete": "हटाएं",
   "Common_On": "चालू",
   "Common_Off": "बंद",
   "Common_Search_Placeholder": "खोजने के लिए यहां टाइप करें...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "उच्च-स्तरीय पीसी पर अंतिम प्रदर्शन प्रदान करता है।",
   "PowerPlan_WinhancePowerPlan_Name": "विनहान्स पावर प्लान",
   "PowerPlan_WinhancePowerPlan_Description": "अधिकतम प्रदर्शन के लिए विनहान्स-अनुकूलित सेटिंग्स के साथ अंतिम प्रदर्शन।",
+  "PowerPlan_Active_Badge": "[सक्रिय]",
+  "PowerPlan_Status_Exists": "सिस्टम पर स्थापित",
+  "PowerPlan_Status_NotExists": "पूर्वनिर्धारित योजना (स्थापित करने के लिए क्लिक करें)",
+  "PowerPlan_Delete_Tooltip": "इस पावर प्लान को हटाएं",
+  "Dialog_DeletePowerPlan_Title": "पावर प्लान हटाएं",
+  "Dialog_DeletePowerPlan_Message": "क्या आप वाकई निम्नलिखित पावर प्लान को हटाना चाहते हैं?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "सक्रिय योजना हटाई नहीं जा सकती",
+  "Dialog_CannotDeleteActivePlan_Message": "आप वर्तमान में सक्रिय पावर प्लान को नहीं हटा सकते। कृपया पहले किसी अन्य योजना पर स्विच करें।",
+  "Dialog_CannotDeletePlan_Title": "योजना हटाई नहीं जा सकती",
+  "Dialog_CannotDeletePlan_Message": "यह योजना सिस्टम पर मौजूद नहीं है और इसे हटाया नहीं जा सकता।",
+  "Dialog_DeleteFailed_Title": "हटाना विफल",
+  "Dialog_DeleteFailed_Message": "पावर प्लान '{0}' को हटाने में विफल। अधिक जानकारी के लिए लॉग देखें।",
   "WIMUtil_Title": "विंडोज इंस्टॉलेशन मीडिया यूटिलिटी",
   "WIMUtil_Subtitle": "कस्टम विंडोज इंस्टॉलेशन मीडिया बनाएँ",
   "WIMUtil_SelectWorkingDirectory": "कार्यशील निर्देशिका चुनें",
