--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Alkalmaz",
   "Button_Refresh": "Frissítés",
   "Button_Help": "Súgó",
+  "Button_Delete": "Törlés",
   "Common_On": "Be",
   "Common_Off": "Ki",
   "Common_Search_Placeholder": "Írjon ide a kereséshez...",
@@ -1025,6 +1026,18 @@
   "PowerPlan_UltimatePerformance_Description": "Kiemelkedő teljesítményt nyújt magasabb kategóriás PC-ken.",
   "PowerPlan_WinhancePowerPlan_Name": "Winhance energiaséma",
   "PowerPlan_WinhancePowerPlan_Description": "Kiemelkedő teljesítmény Winhance-re optimalizált beállításokkal a maximális teljesítmény érdekében.",
+  "PowerPlan_Active_Badge": "[Aktív]",
+  "PowerPlan_Status_Exists": "Telepítve a rendszerre",
+  "PowerPlan_Status_NotExists": "Előre meghatározott séma (kattintson a telepítéshez)",
+  "PowerPlan_Delete_Tooltip": "Energiagazdálkodási séma törlése",
+  "Dialog_DeletePowerPlan_Title": "Energiagazdálkodási séma törlése",
+  "Dialog_DeletePowerPlan_Message": "Biztosan törölni szeretné a következő energiagazdálkodási sémát?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Nem törölhető az aktív séma",
+  "Dialog_CannotDeleteActivePlan_Message": "Nem törölheti a jelenleg aktív energiagazdálkodási sémát. Kérjük, először váltson másik sémára.",
+  "Dialog_CannotDeletePlan_Title": "A séma nem törölhető",
+  "Dialog_CannotDeletePlan_Message": "Ez a séma nem létezik a rendszeren, és nem törölhető.",
+  "Dialog_DeleteFailed_Title": "Törlés sikertelen",
+  "Dialog_DeleteFailed_Message": "Nem sikerült törölni a(z) '{0}' energiagazdálkodási sémát. További részletekért ellenőrizze a naplókat.",
   "WIMUtil_Title": "Windows telepítőmédia segédprogram",
   "WIMUtil_Subtitle": "Hozzon létre egyéni Windows telepítési adathordozót",
   "WIMUtil_SelectWorkingDirectory": "Munkakönyvtár kiválasztása",
