--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Applica",
   "Button_Refresh": "Aggiorna",
   "Button_Help": "Aiuto",
+  "Button_Delete": "Elimina",
   "Common_On": "On",
   "Common_Off": "Off",
   "Common_Search_Placeholder": "Digita qui per cercare...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Fornisce le massime prestazioni su PC di fascia alta.",
   "PowerPlan_WinhancePowerPlan_Name": "Combinazione per il risparmio di energia Winhance",
   "PowerPlan_WinhancePowerPlan_Description": "Prestazioni massime con impostazioni ottimizzate da Winhance per le massime prestazioni.",
+  "PowerPlan_Active_Badge": "[Attivo]",
+  "PowerPlan_Status_Exists": "Installato nel sistema",
+  "PowerPlan_Status_NotExists": "Piano predefinito (clicca per installare)",
+  "PowerPlan_Delete_Tooltip": "Elimina questa combinazione per il risparmio di energia",
+  "Dialog_DeletePowerPlan_Title": "Elimina combinazione per il risparmio di energia",
+  "Dialog_DeletePowerPlan_Message": "Sei sicuro di voler eliminare la seguente combinazione per il risparmio di energia?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Impossibile eliminare il piano attivo",
+  "Dialog_CannotDeleteActivePlan_Message": "Non puoi eliminare la combinazione per il risparmio di energia attualmente attiva. Passa prima a un piano diverso.",
+  "Dialog_CannotDeletePlan_Title": "Impossibile eliminare il piano",
+  "Dialog_CannotDeletePlan_Message": "Questo piano non esiste nel sistema e non può essere eliminato.",
+  "Dialog_DeleteFailed_Title": "Eliminazione fallita",
+  "Dialog_DeleteFailed_Message": "Impossibile eliminare la combinazione per il risparmio di energia '{0}'. Controlla i log per maggiori dettagli.",
   "WIMUtil_Title": "Utilità per supporti di installazione di Windows",
   "WIMUtil_Subtitle": "Crea supporti di installazione di Windows personalizzati",
   "WIMUtil_SelectWorkingDirectory": "Seleziona la directory di lavoro",
