--- a/src/Winhance.UI/Features/Common/Localization/ja.json
+++ b/src/Winhance.UI/Features/Common/Localization/ja.json
@@ -131,6 +131,7 @@
   "Button_Apply": "適用",
   "Button_Refresh": "更新",
   "Button_Help": "ヘルプ",
+  "Button_Delete": "削除",
   "Common_On": "オン",
   "Common_Off": "オフ",
   "Common_Search_Placeholder": "ここで検索...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "ハイエンドPCで究極のパフォーマンスを提供します。",
   "PowerPlan_WinhancePowerPlan_Name": "Winhanceパワープラン",
   "PowerPlan_WinhancePowerPlan_Description": "最高のパフォーマンスを得るためのWinhance最適化設定を備えた究極のパフォーマンス。",
+  "PowerPlan_Active_Badge": "[アクティブ]",
+  "PowerPlan_Status_Exists": "システムにインストール済み",
+  "PowerPlan_Status_NotExists": "定義済みプラン（クリックしてインストール）",
+  "PowerPlan_Delete_Tooltip": "この電源プランを削除",
+  "Dialog_DeletePowerPlan_Title": "電源プランの削除",
+  "Dialog_DeletePowerPlan_Message": "次の電源プランを削除してもよろしいですか？\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "アクティブなプランは削除できません",
+  "Dialog_CannotDeleteActivePlan_Message": "現在アクティブな電源プランは削除できません。先に別のプランに切り替えてください。",
+  "Dialog_CannotDeletePlan_Title": "プランを削除できません",
+  "Dialog_CannotDeletePlan_Message": "このプランはシステムに存在しないため、削除できません。",
+  "Dialog_DeleteFailed_Title": "削除に失敗しました",
+  "Dialog_DeleteFailed_Message": "電源プラン '{0}' の削除に失敗しました。詳細はログを確認してください。",
   "WIMUtil_Title": "Windowsインストールメディアユーティリティ",
   "WIMUtil_Subtitle": "カスタムWindowsインストールメディアの作成",
   "WIMUtil_SelectWorkingDirectory": "作業ディレクトリを選択",
