--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Taikyti",
   "Button_Refresh": "Atnaujinti",
   "Button_Help": "Pagalba",
+  "Button_Delete": "Ištrinti",
   "Common_On": "Įjungta",
   "Common_Off": "Išjungta",
   "Common_Search_Placeholder": "Įveskite tekstą paieškai...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Suteikia maksimalų našumą aukštesnės klasės kompiuteriuose.",
   "PowerPlan_WinhancePowerPlan_Name": "Winhance energijos planas",
   "PowerPlan_WinhancePowerPlan_Description": "Maksimalus našumas su Winhance optimizuotais nustatymais maksimaliam našumui.",
+  "PowerPlan_Active_Badge": "[Aktyvus]",
+  "PowerPlan_Status_Exists": "Įdiegta sistemoje",
+  "PowerPlan_Status_NotExists": "Iš anksto nustatytas planas (spustelėkite, kad įdiegtumėte)",
+  "PowerPlan_Delete_Tooltip": "Ištrinti šį energijos vartojimo planą",
+  "Dialog_DeletePowerPlan_Title": "Ištrinti energijos vartojimo planą",
+  "Dialog_DeletePowerPlan_Message": "Ar tikrai norite ištrinti šį energijos vartojimo planą?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Negalima ištrinti aktyvaus plano",
+  "Dialog_CannotDeleteActivePlan_Message": "Negalite ištrinti šiuo metu aktyvaus energijos vartojimo plano. Pirmiausia perjunkite į kitą planą.",
+  "Dialog_CannotDeletePlan_Title": "Negalima ištrinti plano",
+  "Dialog_CannotDeletePlan_Message": "Šis planas neegzistuoja sistemoje ir negali būti ištrintas.",
+  "Dialog_DeleteFailed_Title": "Ištrynimas nepavyko",
+  "Dialog_DeleteFailed_Message": "Nepavyko ištrinti energijos vartojimo plano „{0}“. Patikrinkite žurnalus dėl išsamesnės informacijos.",
   "WIMUtil_Title": "Windows diegimo medijos įrankis",
   "WIMUtil_Subtitle": "Sukurkite pasirinktinę Windows diegimo mediją",
   "WIMUtil_SelectWorkingDirectory": "Pasirinkite darbo katalogą",
