--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Lietot",
   "Button_Refresh": "Atsvaidzināt",
   "Button_Help": "Palīdzība",
+  "Button_Delete": "Dzēst",
   "Common_On": "Ieslēgts",
   "Common_Off": "Izslēgts",
   "Common_Search_Placeholder": "Rakstiet šeit, lai meklētu...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Nodrošina galveno veiktspēju augstākas klases datoros.",
   "PowerPlan_WinhancePowerPlan_Name": "Winhance enerģijas plāns",
   "PowerPlan_WinhancePowerPlan_Description": "Galvenā veiktspēja ar Winhance optimizētiem iestatījumiem maksimālai veiktspējai.",
+  "PowerPlan_Active_Badge": "[Aktīvs]",
+  "PowerPlan_Status_Exists": "Instalēts sistēmā",
+  "PowerPlan_Status_NotExists": "Iepriekš definēts plāns (noklikšķiniet, lai instalētu)",
+  "PowerPlan_Delete_Tooltip": "Dzēst šo enerģijas plānu",
+  "Dialog_DeletePowerPlan_Title": "Dzēst enerģijas plānu",
+  "Dialog_DeletePowerPlan_Message": "Vai tiešām vēlaties dzēst šādu enerģijas plānu?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Nevar dzēst aktīvo plānu",
+  "Dialog_CannotDeleteActivePlan_Message": "Jūs nevarat dzēst pašlaik aktīvo enerģijas plānu. Lūdzu, vispirms pārslēdzieties uz citu plānu.",
+  "Dialog_CannotDeletePlan_Title": "Nevar dzēst plānu",
+  "Dialog_CannotDeletePlan_Message": "Šis plāns sistēmā nepastāv un to nevar dzēst.",
+  "Dialog_DeleteFailed_Title": "Dzēšana neizdevās",
+  "Dialog_DeleteFailed_Message": "Neizdevās dzēst enerģijas plānu „{0}“. Pārbaudiet žurnālus, lai iegūtu sīkāku informāciju.",
   "WIMUtil_Title": "Windows instalācijas multivides utilīta",
   "WIMUtil_Subtitle": "Izveidot pielāgotu Windows instalācijas multiviti",
   "WIMUtil_SelectWorkingDirectory": "Atlasīt darba direktoriju",
