--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Zastosuj",
   "Button_Refresh": "Odśwież",
   "Button_Help": "Pomoc",
+  "Button_Delete": "Usuń",
   "Common_On": "Włączone",
   "Common_Off": "Wyłączone",
   "Common_Search_Placeholder": "Wpisz, aby wyszukać...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Zapewnia najwyższą wydajność na komputerach z wyższej półki.",
   "PowerPlan_WinhancePowerPlan_Name": "Plan zasilania Winhance",
   "PowerPlan_WinhancePowerPlan_Description": "Najwyższa wydajność z ustawieniami zoptymalizowanymi przez Winhance dla maksymalnej wydajności.",
+  "PowerPlan_Active_Badge": "[Aktywny]",
+  "PowerPlan_Status_Exists": "Zainstalowany w systemie",
+  "PowerPlan_Status_NotExists": "Predefiniowany plan (kliknij, aby zainstalować)",
+  "PowerPlan_Delete_Tooltip": "Usuń ten plan zasilania",
+  "Dialog_DeletePowerPlan_Title": "Usuń plan zasilania",
+  "Dialog_DeletePowerPlan_Message": "Czy na pewno chcesz usunąć następujący plan zasilania?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Nie można usunąć aktywnego planu",
+  "Dialog_CannotDeleteActivePlan_Message": "Nie można usunąć aktualnie aktywnego planu zasilania. Najpierw przełącz się na inny plan.",
+  "Dialog_CannotDeletePlan_Title": "Nie można usunąć planu",
+  "Dialog_CannotDeletePlan_Message": "Ten plan nie istnieje w systemie i nie może zostać usunięty.",
+  "Dialog_DeleteFailed_Title": "Usuwanie nie powiodło się",
+  "Dialog_DeleteFailed_Message": "Nie udało się usunąć planu zasilania '{0}'. Sprawdź dzienniki, aby uzyskać więcej szczegółów.",
   "WIMUtil_Title": "Narzędzie do nośników instalacyjnych systemu Windows",
   "WIMUtil_Subtitle": "Twórz niestandardowe nośniki instalacyjne systemu Windows",
   "WIMUtil_SelectWorkingDirectory": "Wybierz katalog roboczy",
