--- a/src/Winhance.UI/Features/Common/Localization/pt-BR.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt-BR.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Aplicar",
   "Button_Refresh": "Atualizar",
   "Button_Help": "Ajuda",
+  "Button_Delete": "Excluir",
   "Common_On": "Ligado",
   "Common_Off": "Desligado",
   "Common_Search_Placeholder": "Digite aqui para pesquisar...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Fornece desempenho máximo em PCs de ponta.",
   "PowerPlan_WinhancePowerPlan_Name": "Plano de Energia Winhance",
   "PowerPlan_WinhancePowerPlan_Description": "Desempenho Máximo com configurações otimizadas pelo Winhance para desempenho máximo.",
+  "PowerPlan_Active_Badge": "[Ativo]",
+  "PowerPlan_Status_Exists": "Instalado no sistema",
+  "PowerPlan_Status_NotExists": "Plano predefinido (clique para instalar)",
+  "PowerPlan_Delete_Tooltip": "Excluir este plano de energia",
+  "Dialog_DeletePowerPlan_Title": "Excluir Plano de Energia",
+  "Dialog_DeletePowerPlan_Message": "Tem certeza de que deseja excluir o seguinte plano de energia?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Não é possível excluir o plano ativo",
+  "Dialog_CannotDeleteActivePlan_Message": "Você não pode excluir o plano de energia ativo no momento. Por favor, mude para um plano diferente primeiro.",
+  "Dialog_CannotDeletePlan_Title": "Não é possível excluir o plano",
+  "Dialog_CannotDeletePlan_Message": "Este plano não existe no sistema e não pode ser excluído.",
+  "Dialog_DeleteFailed_Title": "Falha ao excluir",
+  "Dialog_DeleteFailed_Message": "Falha ao excluir o plano de energia '{0}'. Verifique os logs para mais detalhes.",
   "WIMUtil_Title": "Utilitário de Mídia de Instalação do Windows",
   "WIMUtil_Subtitle": "Crie Mídia de Instalação Personalizada do Windows",
   "WIMUtil_SelectWorkingDirectory": "Selecionar Diretório de Trabalho",
