--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Aplicar",
   "Button_Refresh": "Atualizar",
   "Button_Help": "Ajuda",
+  "Button_Delete": "Eliminar",
   "Common_On": "Ligado",
   "Common_Off": "Desligado",
   "Common_Search_Placeholder": "Escreva aqui para procurar...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Fornece o desempenho máximo em PCs de gama alta.",
   "PowerPlan_WinhancePowerPlan_Name": "Plano de Energia Winhance",
   "PowerPlan_WinhancePowerPlan_Description": "Desempenho Máximo com definições otimizadas pelo Winhance para o máximo desempenho.",
+  "PowerPlan_Active_Badge": "[Ativo]",
+  "PowerPlan_Status_Exists": "Instalado no sistema",
+  "PowerPlan_Status_NotExists": "Plano predefinido (clique para instalar)",
+  "PowerPlan_Delete_Tooltip": "Eliminar este plano de energia",
+  "Dialog_DeletePowerPlan_Title": "Eliminar Plano de Energia",
+  "Dialog_DeletePowerPlan_Message": "Tem a certeza de que pretende eliminar o seguinte plano de energia?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Não é possível eliminar o plano ativo",
+  "Dialog_CannotDeleteActivePlan_Message": "Não pode eliminar o plano de energia atualmente ativo. Por favor, mude primeiro para um plano diferente.",
+  "Dialog_CannotDeletePlan_Title": "Não é possível eliminar o plano",
+  "Dialog_CannotDeletePlan_Message": "Este plano não existe no sistema e não pode ser eliminado.",
+  "Dialog_DeleteFailed_Title": "Falha ao eliminar",
+  "Dialog_DeleteFailed_Message": "Falha ao eliminar o plano de energia '{0}'. Verifique os registos para mais detalhes.",
   "WIMUtil_Title": "Utilitário de Média de Instalação do Windows",
   "WIMUtil_Subtitle": "Criar Média de Instalação Personalizada do Windows",
   "WIMUtil_SelectWorkingDirectory": "Selecionar Diretório de Trabalho",
