--- a/src/Winhance.UI/Features/Common/Localization/ru.json
+++ b/src/Winhance.UI/Features/Common/Localization/ru.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Применить",
   "Button_Refresh": "Обновить",
   "Button_Help": "Справка",
+  "Button_Delete": "Удалить",
   "Common_On": "Вкл",
   "Common_Off": "Выкл",
   "Common_Search_Placeholder": "Введите здесь для поиска...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Обеспечивает максимальную производительность на высокопроизводительных ПК.",
   "PowerPlan_WinhancePowerPlan_Name": "План электропитания Winhance",
   "PowerPlan_WinhancePowerPlan_Description": "Максимальная производительность с оптимизированными настройками Winhance для максимальной производительности.",
+  "PowerPlan_Active_Badge": "[Активен]",
+  "PowerPlan_Status_Exists": "Установлен в системе",
+  "PowerPlan_Status_NotExists": "Предустановленная схема (нажмите для установки)",
+  "PowerPlan_Delete_Tooltip": "Удалить эту схему электропитания",
+  "Dialog_DeletePowerPlan_Title": "Удалить схему электропитания",
+  "Dialog_DeletePowerPlan_Message": "Вы уверены, что хотите удалить следующую схему электропитания?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Невозможно удалить активную схему",
+  "Dialog_CannotDeleteActivePlan_Message": "Вы не можете удалить текущую активную схему электропитания. Сначала переключитесь на другую схему.",
+  "Dialog_CannotDeletePlan_Title": "Невозможно удалить схему",
+  "Dialog_CannotDeletePlan_Message": "Эта схема не существует в системе и не может быть удалена.",
+  "Dialog_DeleteFailed_Title": "Ошибка удаления",
+  "Dialog_DeleteFailed_Message": "Не удалось удалить схему электропитания '{0}'. Проверьте журналы для получения дополнительной информации.",
   "WIMUtil_Title": "Утилита для установочных носителей Windows",
   "WIMUtil_Subtitle": "Создание пользовательских установочных носителей Windows",
   "WIMUtil_SelectWorkingDirectory": "Выберите рабочий каталог",
