--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Verkställ",
   "Button_Refresh": "Uppdatera",
   "Button_Help": "Hjälp",
+  "Button_Delete": "Ta bort",
   "Common_On": "På",
   "Common_Off": "Av",
   "Common_Search_Placeholder": "Skriv här för att söka...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Ger ultimat prestanda på avancerade datorer.",
   "PowerPlan_WinhancePowerPlan_Name": "Winhance Energischema",
   "PowerPlan_WinhancePowerPlan_Description": "Ultimat prestanda med Winhance-optimerade inställningar för maximal prestanda.",
+  "PowerPlan_Active_Badge": "[Aktiv]",
+  "PowerPlan_Status_Exists": "Installerat på systemet",
+  "PowerPlan_Status_NotExists": "Fördefinierat schema (klicka för att installera)",
+  "PowerPlan_Delete_Tooltip": "Ta bort detta energischema",
+  "Dialog_DeletePowerPlan_Title": "Ta bort energischema",
+  "Dialog_DeletePowerPlan_Message": "Är du säker på att du vill ta bort följande energischema?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Kan inte ta bort aktivt schema",
+  "Dialog_CannotDeleteActivePlan_Message": "Du kan inte ta bort det för närvarande aktiva energischemat. Byt till ett annat schema först.",
+  "Dialog_CannotDeletePlan_Title": "Kan inte ta bort schema",
+  "Dialog_CannotDeletePlan_Message": "Detta schema finns inte på systemet och kan inte tas bort.",
+  "Dialog_DeleteFailed_Title": "Borttagning misslyckades",
+  "Dialog_DeleteFailed_Message": "Kunde inte ta bort energischema '{0}'. Kontrollera loggarna för mer information.",
   "WIMUtil_Title": "Windows installationsmedieverktyg",
   "WIMUtil_Subtitle": "Skapa anpassade Windows-installationsmedia",
   "WIMUtil_SelectWorkingDirectory": "Välj arbetskatalog",
