--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Застосувати",
   "Button_Refresh": "Оновити",
   "Button_Help": "Допомога",
+  "Button_Delete": "Видалити",
   "Common_On": "Увімк",
   "Common_Off": "Вимк",
   "Common_Search_Placeholder": "Введіть тут для пошуку...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Забезпечує максимальну продуктивність на ПК вищого класу.",
   "PowerPlan_WinhancePowerPlan_Name": "План живлення Winhance",
   "PowerPlan_WinhancePowerPlan_Description": "Максимальна продуктивність з оптимізованими налаштуваннями Winhance для максимальної продуктивності.",
+  "PowerPlan_Active_Badge": "[Активний]",
+  "PowerPlan_Status_Exists": "Встановлено в системі",
+  "PowerPlan_Status_NotExists": "Попередньо визначена схема (натисніть для встановлення)",
+  "PowerPlan_Delete_Tooltip": "Видалити цю схему електроживлення",
+  "Dialog_DeletePowerPlan_Title": "Видалити схему електроживлення",
+  "Dialog_DeletePowerPlan_Message": "Ви впевнені, що хочете видалити наступну схему електроживлення?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Неможливо видалити активну схему",
+  "Dialog_CannotDeleteActivePlan_Message": "Ви не можете видалити поточну активну схему електроживлення. Спочатку перейдіть на іншу схему.",
+  "Dialog_CannotDeletePlan_Title": "Неможливо видалити схему",
+  "Dialog_CannotDeletePlan_Message": "Ця схема не існує в системі і не може бути видалена.",
+  "Dialog_DeleteFailed_Title": "Помилка видалення",
+  "Dialog_DeleteFailed_Message": "Не вдалося видалити схему електроживлення '{0}'. Перевірте журнали для отримання додаткової інформації.",
   "WIMUtil_Title": "Утиліта інсталяційного носія Windows",
   "WIMUtil_Subtitle": "Створення власного інсталяційного носія Windows",
   "WIMUtil_SelectWorkingDirectory": "Вибрати робочий каталог",
