--- a/src/Winhance.UI/Features/Common/Localization/vi.json
+++ b/src/Winhance.UI/Features/Common/Localization/vi.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Áp dụng",
   "Button_Refresh": "Làm mới",
   "Button_Help": "Trợ giúp",
+  "Button_Delete": "Xóa",
   "Common_On": "Bật",
   "Common_Off": "Tắt",
   "Common_Search_Placeholder": "Nhập vào đây để tìm kiếm...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Cung cấp hiệu suất tối ưu trên các PC cao cấp hơn.",
   "PowerPlan_WinhancePowerPlan_Name": "Gói năng lượng Winhance",
   "PowerPlan_WinhancePowerPlan_Description": "Hiệu suất tối ưu với các cài đặt được tối ưu hóa của Winhance để có hiệu suất tối đa.",
+  "PowerPlan_Active_Badge": "[Đang hoạt động]",
+  "PowerPlan_Status_Exists": "Đã cài đặt trên hệ thống",
+  "PowerPlan_Status_NotExists": "Gói được định nghĩa trước (nhấp để cài đặt)",
+  "PowerPlan_Delete_Tooltip": "Xóa gói nguồn này",
+  "Dialog_DeletePowerPlan_Title": "Xóa Gói Nguồn",
+  "Dialog_DeletePowerPlan_Message": "Bạn có chắc chắn muốn xóa gói nguồn sau không?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Không thể xóa gói đang hoạt động",
+  "Dialog_CannotDeleteActivePlan_Message": "Bạn không thể xóa gói nguồn đang hoạt động hiện tại. Vui lòng chuyển sang gói khác trước.",
+  "Dialog_CannotDeletePlan_Title": "Không thể xóa gói",
+  "Dialog_CannotDeletePlan_Message": "Gói này không tồn tại trên hệ thống và không thể xóa.",
+  "Dialog_DeleteFailed_Title": "Xóa thất bại",
+  "Dialog_DeleteFailed_Message": "Không thể xóa gói nguồn '{0}'. Kiểm tra nhật ký để biết thêm chi tiết.",
   "WIMUtil_Title": "Tiện ích phương tiện cài đặt Windows",
   "WIMUtil_Subtitle": "Tạo phương tiện cài đặt Windows tùy chỉnh",
   "WIMUtil_SelectWorkingDirectory": "Chọn thư mục làm việc",
