--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -131,6 +131,7 @@
   "Button_Apply": "应用",
   "Button_Refresh": "刷新",
   "Button_Help": "帮助",
+  "Button_Delete": "删除",
   "Common_On": "开",
   "Common_Off": "关",
   "Common_Search_Placeholder": "在此处输入以搜索...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "在高端电脑上提供终极性能。",
   "PowerPlan_WinhancePowerPlan_Name": "Winhance 电源计划",
   "PowerPlan_WinhancePowerPlan_Description": "具有 Winhance 优化设置的终极性能，以实现最高性能。",
+  "PowerPlan_Active_Badge": "[活动]",
+  "PowerPlan_Status_Exists": "已安装在系统上",
+  "PowerPlan_Status_NotExists": "预定义方案（点击安装）",
+  "PowerPlan_Delete_Tooltip": "删除此电源计划",
+  "Dialog_DeletePowerPlan_Title": "删除电源计划",
+  "Dialog_DeletePowerPlan_Message": "您确定要删除以下电源计划吗？\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "无法删除活动计划",
+  "Dialog_CannotDeleteActivePlan_Message": "您无法删除当前活动的电源计划。请先切换到其他计划。",
+  "Dialog_CannotDeletePlan_Title": "无法删除计划",
+  "Dialog_CannotDeletePlan_Message": "此计划在系统上不存在，无法删除。",
+  "Dialog_DeleteFailed_Title": "删除失败",
+  "Dialog_DeleteFailed_Message": "无法删除电源计划 '{0}'。请查看日志以获取更多详细信息。",
   "WIMUtil_Title": "Windows 安装介质实用程序",
   "WIMUtil_Subtitle": "创建自定义 Windows 安装介质",
   "WIMUtil_SelectWorkingDirectory": "选择工作目录",
