--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -131,6 +131,7 @@
   "Button_Apply": "套用",
   "Button_Refresh": "重新整理",
   "Button_Help": "說明",
+  "Button_Delete": "刪除",
   "Common_On": "開啟",
   "Common_Off": "關閉",
   "Common_Search_Placeholder": "在此輸入以搜尋...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "在高階電腦上提供終極效能。",
   "PowerPlan_WinhancePowerPlan_Name": "Winhance 電源計畫",
   "PowerPlan_WinhancePowerPlan_Description": "透過 Winhance 最佳化設定的終極效能，提供最大效能。",
+  "PowerPlan_Active_Badge": "[使用中]",
+  "PowerPlan_Status_Exists": "已安裝於系統上",
+  "PowerPlan_Status_NotExists": "預先定義的方案（點擊以安裝）",
+  "PowerPlan_Delete_Tooltip": "刪除此電源計劃",
+  "Dialog_DeletePowerPlan_Title": "刪除電源計劃",
+  "Dialog_DeletePowerPlan_Message": "您確定要刪除以下電源計劃嗎？\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "無法刪除使用中的計劃",
+  "Dialog_CannotDeleteActivePlan_Message": "您無法刪除目前使用中的電源計劃。請先切換至其他計劃。",
+  "Dialog_CannotDeletePlan_Title": "無法刪除計劃",
+  "Dialog_CannotDeletePlan_Message": "此計劃在系統上不存在，無法刪除。",
+  "Dialog_DeleteFailed_Title": "刪除失敗",
+  "Dialog_DeleteFailed_Message": "無法刪除電源計劃 '{0}'。請查看記錄以取得更多詳細資訊。",
   "WIMUtil_Title": "Windows 安裝媒體工具",
   "WIMUtil_Subtitle": "建立自訂 Windows 安裝媒體",
   "WIMUtil_SelectWorkingDirectory": "選擇工作目錄",
