--- a/src/Winhance.UI/Features/Common/Localization/nl.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl.json
@@ -131,6 +131,7 @@
   "Button_Apply": "Toepassen",
   "Button_Refresh": "Vernieuwen",
   "Button_Help": "Help",
+  "Button_Delete": "Verwijderen",
   "Common_On": "Aan",
   "Common_Off": "Uit",
   "Common_Search_Placeholder": "Typ hier om te zoeken...",
@@ -1021,6 +1022,18 @@
   "PowerPlan_UltimatePerformance_Description": "Biedt ultieme prestaties op high-end pc\u0027s.",
   "PowerPlan_WinhancePowerPlan_Name": "Winhance Energiebeheerschema",
   "PowerPlan_WinhancePowerPlan_Description": "Ultieme Prestaties met Winhance-geoptimaliseerde instellingen voor maximale prestaties.",
+  "PowerPlan_Active_Badge": "[Actief]",
+  "PowerPlan_Status_Exists": "Geïnstalleerd op het systeem",
+  "PowerPlan_Status_NotExists": "Vooraf gedefinieerd schema (klik om te installeren)",
+  "PowerPlan_Delete_Tooltip": "Dit energiebeheerschema verwijderen",
+  "Dialog_DeletePowerPlan_Title": "Energiebeheerschema verwijderen",
+  "Dialog_DeletePowerPlan_Message": "Weet u zeker dat u het volgende energiebeheerschema wilt verwijderen?\n\n{0}",
+  "Dialog_CannotDeleteActivePlan_Title": "Kan actief schema niet verwijderen",
+  "Dialog_CannotDeleteActivePlan_Message": "U kunt het momenteel actieve energiebeheerschema niet verwijderen. Schakel eerst over naar een ander schema.",
+  "Dialog_CannotDeletePlan_Title": "Kan schema niet verwijderen",
+  "Dialog_CannotDeletePlan_Message": "Dit schema bestaat niet op het systeem en kan niet worden verwijderd.",
+  "Dialog_DeleteFailed_Title": "Verwijderen mislukt",
+  "Dialog_DeleteFailed_Message": "Kan energiebeheerschema '{0}' niet verwijderen. Controleer de logboeken voor meer details.",
   "WIMUtil_Title": "Windows Installatiemedia Hulpprogramma",
   "WIMUtil_Subtitle": "Aangepaste Windows Installatiemedia Maken",
   "WIMUtil_SelectWorkingDirectory": "Werkmap Selecteren",
